@@ -809,6 +809,7 @@ gtk_text_forward_delete (GtkText *text,
       compute_lines_pixels (text, nchars, &old_lines, &old_height);
     }
 
+  /* FIXME, or resizing after deleting will be odd */
   if (text->point.index < text->first_line_start_index)
     {
       if (text->point.index + nchars >= text->first_line_start_index)
@@ -3215,8 +3216,6 @@ find_cursor (GtkText* text, gboolean scroll)
 
   find_line_containing_point (text, text->cursor_mark.index, scroll);
 
-  g_assert (text->cursor_mark.index >= text->first_line_start_index);
-
   if (text->current_line)
     find_cursor_at_line (text,
 			 &CACHE_DATA(text->current_line),
@@ -3720,12 +3719,27 @@ adjust_adj (GtkText* text, GtkAdjustment* adj)
 static gint
 set_vertical_scroll_iterator (GtkText* text, LineParams* lp, void* data)
 {
-  gint *pixel_count = (gint*) data;
+  SetVerticalScrollData *svdata = (SetVerticalScrollData *) data;
 
-  if (text->first_line_start_index == lp->start.index)
-    text->vadj->value = (float) *pixel_count + text->first_cut_pixels;
+  if ((text->first_line_start_index >= lp->start.index) &&
+      (text->first_line_start_index <= lp->end.index))
+    {
+      svdata->mark = lp->start;
 
-  *pixel_count += LINE_HEIGHT (*lp);
+      if (text->first_line_start_index == lp->start.index)
+	{
+	  text->first_onscreen_ver_pixel = svdata->pixel_height + text->first_cut_pixels;
+	}
+      else
+	{
+	  text->first_onscreen_ver_pixel = svdata->pixel_height;
+	  text->first_cut_pixels = 0;
+	}
+      
+      text->vadj->value = (float) text->first_onscreen_ver_pixel;
+    }
+  
+  svdata->pixel_height += LINE_HEIGHT (*lp);
 
   return FALSE;
 }
@@ -3736,9 +3750,6 @@ set_vertical_scroll_find_iterator (GtkText* text, LineParams* lp, void* data)
   SetVerticalScrollData *svdata = (SetVerticalScrollData *) data;
   gint return_val;
 
-  if (svdata->last_didnt_wrap)
-    svdata->last_line_start = lp->start.index;
-
   if (svdata->pixel_height <= (gint) text->vadj->value &&
       svdata->pixel_height + LINE_HEIGHT(*lp) > (gint) text->vadj->value)
     {
@@ -3746,7 +3757,7 @@ set_vertical_scroll_find_iterator (GtkText* text, LineParams* lp, void* data)
 
       text->first_cut_pixels = (gint)text->vadj->value - svdata->pixel_height;
       text->first_onscreen_ver_pixel = svdata->pixel_height;
-      text->first_line_start_index = svdata->last_line_start;
+      text->first_line_start_index = lp->start.index;
 
       return_val = TRUE;
     }
@@ -3757,11 +3768,6 @@ set_vertical_scroll_find_iterator (GtkText* text, LineParams* lp, void* data)
       return_val = FALSE;
     }
 
-  if (!lp->wraps)
-    svdata->last_didnt_wrap = TRUE;
-  else
-    svdata->last_didnt_wrap = FALSE;
-
   return return_val;
 }
 
@@ -3771,12 +3777,12 @@ set_vertical_scroll (GtkText* text)
   GtkPropertyMark mark = find_mark (text, 0);
   SetVerticalScrollData data;
   gint height;
-  gint pixel_count = 0;
   gint orig_value;
 
-  line_params_iterate (text, &mark, NULL, FALSE, &pixel_count, set_vertical_scroll_iterator);
+  data.pixel_height = 0;
+  line_params_iterate (text, &mark, NULL, FALSE, &data, set_vertical_scroll_iterator);
 
-  text->vadj->upper = (float) pixel_count;
+  text->vadj->upper = (float) data.pixel_height;
   orig_value = (gint) text->vadj->value;
 
   gdk_window_get_size (text->text_area, NULL, &height);
@@ -3800,13 +3806,9 @@ set_vertical_scroll (GtkText* text)
       line_params_iterate (text, &mark, NULL,
 			   FALSE, &data,
 			   set_vertical_scroll_find_iterator);
+    }
 
-      return data.mark;
-    }
-  else
-    {
-      return find_mark (text, text->first_line_start_index);
-    }
+  return data.mark;
 }
 
 static void
